
AC_INIT(Src/zsh.h)

real_no_create=$no_create
no_create=yes

builtin([include], [zshconfig.ac])

dnl The standard config.status is missing some essential features.
dnl So add them now.  See the comment at the end of Src/mkmakemod.sh.
[rm -f $CONFIG_STATUS.old
cp $CONFIG_STATUS $CONFIG_STATUS.old
sed '1,$s@^\( *ac_file_inputs=\).*$@\1`echo $ac_file_in | sed -e "s%^%:%" -e "s%:\\([^!]\\)% $ac_given_srcdir/\\1%g" -e "s%:!% %"`@' \
 $CONFIG_STATUS.old >$CONFIG_STATUS
 echo "# Hack for autoconf-2.13" >>$CONFIG_STATUS
 chmod +x $CONFIG_STATUS
 rm -f $CONFIG_STATUS.old]

test "$real_no_create" = yes || ${CONFIG_SHELL-/bin/sh} $CONFIG_STATUS || exit 1

